fixed nav bar alignment

--- a/app/assets/css/app/pages/home/general.css
+++ b/app/assets/css/app/pages/home/general.css
@@ -8,3 +8,10 @@ body {
 	padding-bottom: 10px;
 	font-size: 16px;
 }
+
+@media (min-width: 768px) {
+	.navbar-collapse {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
